demonstrate issue #1794
